Added issue Images

--- a/articles.bib
+++ b/articles.bib
@@ -137,6 +137,21 @@
   file = {/Users/mavi/Zotero/storage/TZQM4YIN/Ashwinkumar et al. - 2022 - Automated plant leaf disease detection and classif.pdf}
 }
 
+@book{axlerLinearAlgebraDone2024,
+  title = {Linear {{Algebra Done Right}}},
+  author = {Axler, Sheldon},
+  date = {2024},
+  series = {Undergraduate {{Texts}} in {{Mathematics}}},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-031-41026-0},
+  url = {https://link.springer.com/10.1007/978-3-031-41026-0},
+  urldate = {2023-11-02},
+  isbn = {978-3-031-41025-3 978-3-031-41026-0},
+  langid = {english},
+  file = {/Users/mavi/Zotero/storage/Z7345BXL/Axler - 2024 - Linear Algebra Done Right.pdf}
+}
+
 @article{ayoniUrbanAgriculturePolicy2022,
   title = {Urban Agriculture and Policy: {{Mitigating}} Urban Negative Externalities},
   shorttitle = {Urban Agriculture and Policy},
@@ -358,6 +373,25 @@
   date = {2000},
   journaltitle = {Dr. Dobb's Journal of Software Tools},
   keywords = {bibtex-import,read}
+}
+
+@article{breretonPartialLeastSquares2014,
+  title = {Partial Least Squares Discriminant Analysis: Taking the Magic Away},
+  shorttitle = {Partial Least Squares Discriminant Analysis},
+  author = {Brereton, Richard G. and Lloyd, Gavin R.},
+  date = {2014},
+  journaltitle = {Journal of Chemometrics},
+  volume = {28},
+  number = {4},
+  pages = {213--225},
+  issn = {1099-128X},
+  doi = {10.1002/cem.2609},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cem.2609},
+  urldate = {2023-11-20},
+  abstract = {Partial least squares discriminant analysis (PLS-DA) has been available for nearly 20 years yet is poorly understood by most users. By simple examples, it is shown graphically and algebraically that for two equal class sizes, PLS-DA using one partial least squares (PLS) component provides equivalent classification results to Euclidean distance to centroids, and by using all nonzero components to linear discriminant analysis. Extensions where there are unequal class sizes and more than two classes are discussed including common pitfalls and dilemmas. Finally, the problems of overfitting and PLS scores plots are discussed. It is concluded that for classification purposes, PLS-DA has no significant advantages over traditional procedures and is an algorithm full of dangers. It should not be viewed as a single integrated method but as step in a full classification procedure. However, despite these limitations, PLS-DA can provide good insight into the causes of discrimination via weights and loadings, which gives it a unique role in exploratory data analysis, for example in metabolomics via visualisation of significant variables such as metabolites or spectroscopic peaks. Copyright © 2014 John Wiley \& Sons, Ltd.},
+  langid = {english},
+  keywords = {Classification,Discrimination,Partial Least Squares,Two Class Classifiers},
+  file = {/Users/mavi/Zotero/storage/7WU2XC7W/Brereton_Lloyd_2014_Partial least squares discriminant analysis.pdf;/Users/mavi/Zotero/storage/ETA6VX8R/cem.html}
 }
 
 @online{burdaImportanceWeightedAutoencoders2016,
@@ -1145,6 +1179,26 @@
   abstract = {Agriculture provides food to all the human beings even in case of rapid increase in the population. It is recommended to predict the plant diseases at their early stage in the field of agriculture is essential to cater the food to the overall population. But it unfortunate to predict the diseases at the early stage of the crops. The idea behind the paper is to bring awareness amongst the farmers about the cutting-edge technologies to reduces diseases in plant leaf. Since tomato is merely available vegetable, the approaches of machine learning and image processing with an accurate algorithm is identified to detect the leaf diseases in the tomato plant. In this investigation, the samples of tomato leaves having disorders are considered. With these disorder samples of tomato leaves, the farmers will easily find the diseases based on the early symptoms. Firstly, the samples of tomato leaves are resized to 256x256 pixels and then Histogram Equalization is used to improve the quality of tomato samples. The K-means clustering is introduced for partitioning of dataspace into Voronoi cells. The boundary of leaf samples is extracted using contour tracing. The multiple descriptors viz., Discrete Wavelet Transform, Principal Component Analysis and Grey Level Co-occurrence Matrix are used to extract the informative features of the leaf samples. Finally, the extracted features are classified using machine learning approaches such as Support Vector Machine (SVM), Convolutional Neural Network (CNN) and K-Nearest Neighbor (K-NN). The accuracy of the proposed model is tested using SVM (88\%), K-NN (97\%) and CNN (99.6\%) on tomato disordered samples.},
   langid = {english},
   file = {/Users/mavi/Zotero/storage/DWKN8RKN/Harakannanavar et al. - 2022 - Plant Leaf Disease Detection using Computer Vision.pdf}
+}
+
+@article{harrisArrayProgrammingNumPy2020,
+  title = {Array Programming with {{NumPy}}},
+  author = {Harris, Charles R. and Millman, K. Jarrod and family=Walt, given=Stéfan J., prefix=van der, useprefix=true and Gommers, Ralf and Virtanen, Pauli and Cournapeau, David and Wieser, Eric and Taylor, Julian and Berg, Sebastian and Smith, Nathaniel J. and Kern, Robert and Picus, Matti and Hoyer, Stephan and family=Kerkwijk, given=Marten H., prefix=van, useprefix=true and Brett, Matthew and Haldane, Allan and family=Río, given=Jaime Fernández, prefix=del, useprefix=true and Wiebe, Mark and Peterson, Pearu and Gérard-Marchant, Pierre and Sheppard, Kevin and Reddy, Tyler and Weckesser, Warren and Abbasi, Hameer and Gohlke, Christoph and Oliphant, Travis E.},
+  date = {2020-09},
+  journaltitle = {Nature},
+  volume = {585},
+  number = {7825},
+  pages = {357--362},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/s41586-020-2649-2},
+  url = {https://www.nature.com/articles/s41586-020-2649-2},
+  urldate = {2023-10-15},
+  abstract = {Array programming provides a powerful, compact and expressive syntax for accessing, manipulating and operating on data in vectors, matrices and higher-dimensional arrays. NumPy is the primary array programming library for the Python language. It has an essential role in research analysis pipelines in fields as diverse as physics, chemistry, astronomy, geoscience, biology, psychology, materials science, engineering, finance and economics. For example, in astronomy, NumPy was an important part of the software stack used in the discovery of gravitational waves1 and in the first imaging of a black hole2. Here we review how a few fundamental array concepts lead to a simple and powerful programming paradigm for organizing, exploring and analysing scientific data. NumPy is the foundation upon which the scientific Python ecosystem is constructed. It is so pervasive that several projects, targeting audiences with specialized needs, have developed their own NumPy-like interfaces and array objects. Owing to its central position in the ecosystem, NumPy increasingly acts as an interoperability layer between such array computation libraries and, together with its application programming interface (API), provides a flexible framework to support the next decade of scientific and industrial analysis.},
+  issue = {7825},
+  langid = {english},
+  keywords = {Computational neuroscience,Computational science,Computer science,Software,Solar physics},
+  file = {/Users/mavi/Zotero/storage/Z3LY37PY/Harris et al_2020_Array programming with NumPy.pdf}
 }
 
 @article{harveyIntegerMultiplicationTime,
@@ -3341,6 +3395,26 @@
   file = {/Users/mavi/Zotero/storage/WGC8MZEE/Samiei et al_2020_Deep learning-based detection of seedling development.pdf;/Users/mavi/Zotero/storage/J7LSPYD4/s13007-020-00647-9.html}
 }
 
+@article{sarmaEvidenceSuggestedTherapeutic2017,
+  title = {Evidence and {{Suggested Therapeutic Approach}} in {{Psoriasis}} of {{Difficult-to-treat Areas}}: {{Palmoplantar Psoriasis}}, {{Nail Psoriasis}}, {{Scalp Psoriasis}}, and {{Intertriginous Psoriasis}}},
+  shorttitle = {Evidence and {{Suggested Therapeutic Approach}} in {{Psoriasis}} of {{Difficult-to-treat Areas}}},
+  author = {Sarma, Nilendu},
+  date = {2017},
+  journaltitle = {Indian Journal of Dermatology},
+  shortjournal = {Indian J Dermatol},
+  volume = {62},
+  number = {2},
+  eprint = {28400628},
+  eprinttype = {pmid},
+  pages = {113--122},
+  issn = {0019-5154},
+  doi = {10.4103/ijd.IJD_539_16},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5363132/},
+  urldate = {2023-10-21},
+  abstract = {Psoriasis is resistant to treatment and it shows frequent relapse; systemic treatment is often associated with toxicities, and long-term safety data are lacking for most of the newer drugs like biologics. Moreover, some body areas such as hands, feet, intertriginous areas, scalp, and nails are even more resistant. Frequently, systemic treatments are necessary considering the higher psychological impact on the patient. There is a lack of agreement on the best therapeutic modalities in the management of psoriasis involving difficult-to-treat locations. At present, there are no Indian guidelines for these conditions. Available literature has been reviewed extensively on the treatment of psoriasis involving difficult-to-treat locations; level of evidence has been evaluated as per the Oxford Centre for Evidence-Based Medicine 2011 guideline, and therapeutic suggestions have been developed. Best care has been employed to consider socioeconomic, cultural, genetic, and ethnic factors to prepare a therapeutic suggestion that is appropriate and logical to be used among Indian population and people of similar ethnic and socioeconomic background.},
+  pmcid = {PMC5363132}
+}
+
 @article{schelhaasIntroducingTreeInteractions2007,
   title = {Introducing Tree Interactions in Wind Damage Simulation},
   author = {Schelhaas, M.J. and Kramer, K. and Peltola, H. and family=Werf, given=D.C., prefix=van der, useprefix=true and Wijdeven, S.M.J.},
@@ -3491,7 +3565,7 @@
   urldate = {2023-06-22},
   abstract = {In recent times, deep neural networks achieved outstanding predictive performance on various classification and pattern recognition tasks. However, many real-world prediction problems have ordinal response variables, and this ordering information is ignored by conventional classification losses such as the multi-category cross-entropy. Ordinal regression methods for deep neural networks address this. One such method is the CORAL method, which is based on an earlier binary label extension framework and achieves rank consistency among its output layer tasks by imposing a weight-sharing constraint. However, while earlier experiments showed that CORAL's rank consistency is beneficial for performance, it is limited by a weight-sharing constraint in a neural network's fully connected output layer, which may restrict the expressiveness and capacity of a network trained using CORAL. We propose a new method for rank-consistent ordinal regression without this limitation. Our rank-consistent ordinal regression framework (CORN) achieves rank consistency by a novel training scheme. This training scheme uses conditional training sets to obtain the unconditional rank probabilities through applying the chain rule for conditional probability distributions. Experiments on various datasets demonstrate the efficacy of the proposed method to utilize the ordinal target information, and the absence of the weight-sharing restriction improves the performance substantially compared to the CORAL reference approach. Additionally, the suggested CORN method is not tied to any specific architecture and can be utilized with any deep neural network classifier to train it for ordinal regression tasks.},
   pubstate = {preprint},
-  keywords = {\_tablet,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,read,Statistics - Machine Learning},
   file = {/Users/mavi/Zotero/storage/ARN3UXJ5/Shi et al_2023_Deep Neural Networks for Rank-Consistent Ordinal Regression Based On.pdf;/Users/mavi/Zotero/storage/CANHTAIE/2111.html}
 }
 
